<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_custom_invite"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/invite_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/edittext_input_digits_letter"
            android:hint="@string/invitation_code"
            android:inputType="textVisiblePassword"
            android:maxLength="16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/invite_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/set" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitation_code_request" />
    </LinearLayout>

</RelativeLayout>