<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/regist_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_user_icon"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/regist_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_lock_icon"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/regist_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_lock_icon"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true" />

        <EditText
            android:id="@+id/regist_invite_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/edittext_input_digits_letter"
            android:drawableLeft="@drawable/register_invite_icon"
            android:drawableRight="@drawable/register_qrcode"
            android:hint="@string/invitation_code"
            android:inputType="textVisiblePassword"
            android:maxLength="16"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/regist_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbutton_background"
            android:text="@string/register"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>