<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/find_password_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/findpassword_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/phone_icon"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/findpassword_security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/login_lock_icon"
                android:hint="@string/phone_security"
                android:inputType="number"
                android:maxLength="4"
                android:singleLine="true" />

            <Button
                android:id="@+id/find_password"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/getphonesecurity_background"
                android:padding="5dp"
                android:text="@string/get_phone_security"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbutton_background"
            android:text="@string/next_step"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>