<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/reset_password_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/regist_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_lock_icon"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/regist_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_lock_icon"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbutton_background"
            android:text="@string/set"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>