<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/login_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_user_icon"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/login_lock_icon"
                android:drawableRight="@drawable/find_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true" />

            <Button
                android:id="@+id/find_password"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/login_password"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/login_password"
                android:background="#00000000" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbutton_background"
            android:text="@string/login"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/login_register_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/register_partner_account"
            android:textColor="@color/blue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/login_see_partner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/know_partner"
                android:textColor="#ffcccccc" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>