<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/find_password_head" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/head"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/header" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/head"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/partner_textview_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/partner_head_id" />

                    <TextView
                        android:id="@+id/id_tv"
                        style="@style/partner_textview_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/partner_textview_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/partner_head_name" />

                    <TextView
                        android:id="@+id/account_tv"
                        style="@style/partner_textview_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/partner_textview_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/partner_invitation_code" />

                    <TextView
                        android:id="@+id/invitation_tv"
                        style="@style/partner_textview_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:id="@+id/share"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/share" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear"
                android:layout_centerHorizontal="true"
                android:text="@string/sub_partner_my_use_invitation_code"
                android:textColor="#333333" />

            <ImageView
                android:id="@+id/qr_img"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_below="@id/tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/qr_img"
                android:layout_centerHorizontal="true"
                android:text="@string/sub_partner_my_scan_qr"
                android:textColor="#333333" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>