<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:utils="http://schemas.android.com/apk/res/cn.edu.bjtu.partner"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/partner_head_bg" >

            <cn.edu.bjtu.partner.ui.utils.CustomImageView
                android:id="@+id/head"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                utils:src="@drawable/header"
                utils:type="circle" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@id/head"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/partner_textview_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/partner_head_id" />

                    <TextView
                        style="@style/partner_textview_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="dzq" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/partner_textview_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/partner_head_name" />

                    <TextView
                        style="@style/partner_textview_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="董小球" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/partner_textview_key"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/partner_head_level" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/star" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/question" />
                </RelativeLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/partner_textview_key"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/partner_head_low_partner_num" />

                        <TextView
                            style="@style/partner_textview_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="182" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/question" />
                </RelativeLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/partner_textview_key"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/partner_head_back_a" />

                        <TextView
                            style="@style/partner_textview_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2%" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/question" />
                </RelativeLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/partner_textview_key"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/partner_head_back_b" />

                        <TextView
                            style="@style/partner_textview_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="50%" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/question" />
                </RelativeLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/middle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/top" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#696969"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="手续费:10000"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="保证金:230303"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/white" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>